# akson-web

./: .dockerignore  .gitignore  AGI.md  Dockerfile  LICENSE.md  README.md  agent.py  chat_interface.py  compose.yaml  fake_interview.py  framework.py  function_calling.py  index.html  loader.py  logger.py  main.py  openai_client.py  openai_compat.py  package-lock.json  package.json  pyproject.toml  registry.py  run-docker.sh  run.sh  style.css  vite.config.js
agents/: assistant.py  chatgpt.py  echo.py  hello.py  interviewer.py  movie.py  sam.py
app/: package-lock.json  package.json
app/src/: App.jsx
assistants/: assistant.py  chatgpt.py  claude.py  exa.py  gmail.py  gmail_composio.py  gmail_mcp.py  mathematician.py  mathematician2.py  movie.py  perplexity.py  rewriter.py  therapist.py
backend/: Dockerfile  fake_interview.py  framework.py  function_calling.py  loader.py  main.py  openai_compat.py  pyproject.toml
backend/assistants/: assistant.py  claude.py  mathematician.py  mathematician2.py  movie.py  replier.py
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: ChatContent.jsx  Drawer.jsx  KeyboardShortcutsModal.jsx  Sidebar.jsx
src/: App.jsx
src/components/: ChatContent.jsx  ChatMessage.jsx  Drawer.jsx  KeyboardShortcutsModal.jsx  Sidebar.jsx
tools/: email.py  search.py
web/: app.js  chat.html  index.html  index2.html
web/static/: chat.js
