[tool.poetry]
name = "crowd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.3.0"
pydantic = "^2.9.2"
openai = "^1.46.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.30.6"
sse-starlette = "^2.1.3"
langgraph = "^0.2.24"
langchain-openai = "^0.2.0"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
exa-py = "^1.1.8"
langchain-ollama = "^0.2.0"
chromadb = "^0.5.23"
putio-py = "^8.7.0"
requests = "^2.32.3"
setuptools = "^75.6.0"
docstring-parser = "^0.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
