[project]
name = "crowd"
version = "0.1.0"
description = "Personal Assistant"
authors = [
    {name = "Cenk Altı", email = "cenkalti@gmail.com"},
]
requires-python = "<4.0,>=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "gradio<6.0.0,>=5.3.0",
    "pydantic<3.0.0,>=2.9.2",
    "openai<2.0.0,>=1.46.0",
    "python-dotenv<2.0.0,>=1.0.1",
    "uvicorn<1.0.0,>=0.30.6",
    "sse-starlette<3.0.0,>=2.1.3",
    "langgraph<1.0.0,>=0.2.24",
    "langchain-openai<1.0.0,>=0.2.0",
    "langchain<1.0.0,>=0.3.0",
    "langchain-community<1.0.0,>=0.3.0",
    "exa-py<2.0.0,>=1.1.8",
    "chromadb<1.0.0,>=0.5.23",
    "putio-py<9.0.0,>=8.7.0",
    "requests<3.0.0,>=2.32.3",
    "setuptools<76.0.0,>=75.6.0",
    "docstring-parser<1.0,>=0.16",
    "jinja2>=3.1.5",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
