[project]
name = "crowd"
version = "0.1.0"
description = "Personal Assistant"
authors = [
    {name = "Cenk Altı", email = "cenkalti@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.2",
    "openai>=1.63.2",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.30.6",
    "sse-starlette>=2.1.3",
    "exa-py>=1.1.8",
    "putio-py>=8.7.0",
    "requests>=2.32.3",
    "docstring-parser>=0.16",
    "jinja2>=3.1.5",
    "fastapi>=0.115.8",
    "rich>=13.9.4",
    "setuptools>=75.8.0",
    "anthropic>=0.47.1",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
